--- a/cat/index.html
+++ b/cat/index.html
@@ -1,1 +1,115 @@
+<html>
+<head>
+  <title>Vocat</title>
+  <style>
+    body {
+      background:black;
+      padding: 20px;
+      color:white;
+      
+    }
+    h1 {
+      margin: 0px;
+    }
+    .fs {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+      gap: 20px;
+      margin-top:10px;
+    }
+    .f {
+      background:black;
+      border-radius:12px;
+      padding: 20px;
+      text-align: center;
+      transition: transform 0.2s;
+      text-decoration: none;
+      border:1px solid white;
+      color:white;
+    }
+    .f:hover {
+      transform: scale(1.05);
+      background: grey;
+    }
+    .i {
+      font-size: 40px;
+    }
+    .n {
+      margin-top: 10px;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
 
+  <h1>VocCat</h1>
+<br><br>
+  <div class="fs">
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Nouns</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Pronouns</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Verbs</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Adjectives</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Adverbs</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Prepositions</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Conjunctions</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Interjections</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Vegetables</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Fruits</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Flowers</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Trees</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Weather</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Disasters</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Animals</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Birds</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Insects</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Sea Creatures</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Food</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Drinks</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Spices</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Dairy</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Grains</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Cooking</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Tools</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Body</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Health</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Emotions</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Senses</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Clothes</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Actions</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Subjects</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Classroom</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Instructions</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Jobs</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Transport</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Shopping</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Tech</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Media</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Places</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Countries</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Geography</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Time</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Days & Months</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Numbers</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Quantifiers</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Questions</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Modals</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Negatives</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Phrases</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Idioms</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Synonyms</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Antonyms</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Homophones</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Colors</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Shapes</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Sizes</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Feelings</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Directions</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Sports</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Games</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Instruments</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Festivals</div></a>
+    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Religion</div></a>
+  </div>
+
+</body>
+</html>
