--- a/cat/vegitable/index.html
+++ b/cat/vegitable/index.html
@@ -35,6 +35,7 @@
   
   let td= new Date();
   td=td.toISOString();
+  let dada=0;
   td=td.split('T')[0];
   async function fetwo(u, i) {
   let o = document.getElementById(i);
@@ -42,7 +43,9 @@
   o.textContent = "Loading...";
   try{
   let r = await fetch(u);
-  let d = await r.json();
+  let dx = await r.json();
+  dada=dx;
+  let d= Object.keys(dx);
   o.textContent = "";
   for (let x of d) {
   let e = document.createElement("div");
@@ -69,7 +72,7 @@
   }
   
   setTimeout(()=>{
- fetwo("https://microintel.github.io/vocs/wd.json","www");
+ fetwo("https://microintel.github.io/vocs/cat/vegitable/veg.json","www");
   },1000);
   
   
@@ -100,14 +103,14 @@
   o.innerHTML = `<p>No result found , <br><br> Google It  "<strong onclick="location.href='https://www.google.com/search?q=${w} word meaning'">${w}</strong>".</p>`;
   return;
   }
-  
+  let gih= dada[wo];
   let h = `
   <div style="margin-bottom:10px;">
   <div style="display:flex;justify-content:space-around;align-items:center;margin-top:6px;">
-  <a href="${gimg}" target="_blank" style="text-decoration:none;">
+  <a href="${gimg} vegitable image" target="_blank" style="text-decoration:none;">
   <button style="padding:6px 12px;border:none;border-radius:12px;background:black;color:white;"> Sarch ${wo} Image </button>
   </a>
-  
+  <button onclick="location.href='${gih}'" style="padding:6px 12px;border:none;border-radius:12px;background:black;color:white;">wiki</button>
   <button style="color:white;background-color:black;border:1px solid black;border-radius:12px;font-size:1.1rem;" onclick="this.parentNode.parentNode.parentNode.style.display='none'"> Hide </button>
   </div>
   </div>
