--- a/cat/index.html
+++ b/cat/index.html
@@ -74,7 +74,7 @@
     <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Prepositions</div></a>
     <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Conjunctions</div></a>
     <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Interjections</div></a>
-    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Vegetables</div></a>
+    <a href="vegitable/index.html" class="f"><div class="i">📂</div><div class="n">Vegetables</div></a>
     <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Fruits</div></a>
     <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Flowers</div></a>
     <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Trees</div></a>
