--- a/cat/fruit/index.html
+++ b/cat/fruit/index.html
@@ -107,7 +107,7 @@
   let h = `
   <div style="margin-bottom:10px;">
   <div style="display:flex;justify-content:space-around;align-items:center;margin-top:6px;">
-  <a href="${gimg} vegitable image" target="_blank" style="text-decoration:none;">
+  <a href="${gimg} fruit image" target="_blank" style="text-decoration:none;">
   <button style="padding:6px 12px;border:none;border-radius:12px;background:black;color:white;"> Sarch ${wo} Image </button>
   </a>
   <button onclick="location.href='${gih}'" style="padding:6px 12px;border:none;border-radius:12px;background:black;color:white;">wiki</button>
