--- a/cat/index.html
+++ b/cat/index.html
@@ -66,7 +66,7 @@
 <br>
 <input placeholder="Seach Cat" oninput="fsea(this.value)" type="text"><br><br>
   <div class="fs">
-    <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Nouns</div></a>
+    <a href="noun/index.html" class="f"><div class="i">📂</div><div class="n">Nouns</div></a>
     <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Pronouns</div></a>
     <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Verbs</div></a>
     <a href="https://microintel.github.io/endgram/file/co6.html" class="f"><div class="i">📂</div><div class="n">Adjectives</div></a>
