--- a/home.html
+++ b/home.html
@@ -70,6 +70,7 @@
     <div class="fs">
       <a href="api.html" class="f"><div class="i">📂</div><div class="n">Search Word</div></a>
       <a href="vocs.html" class="f"><div class="i">📂</div><div class="n">Vigguu</div></a>
+      <a href="sentx.html" class="f"><div class="i">📂</div><div class="n"> Sentences</div></a>
       <a href="cat/index.html" class="f"><div class="i">📂</div><div class="n">Voc Category</div></a>
     </div>
   </div>
