--- a/sentx.html
+++ b/sentx.html
@@ -57,10 +57,31 @@
     margin:0px;
     }
   </style>
+  <style>
+  #sug{
+  position: absolute;
+  background: black;
+  border: 1px solid var(--primary);
+  display: none;
+  min-height:100px;
+  max-height: 200px;
+  overflow-y: auto;
+  z-index: 1000;
+  border-radius:12px;
+  margin-top:80px;
+  }
+  #sug div {
+  padding: 4px;
+  font-size:1.4rem;
+  }
+  #sug div:hover {
+  background: #eee;
+  }
+  </style>
 </head>
 <body>
   <h2>SentX</h2>
-  <input type="text" id="w" placeholder="Word" />
+  <input type="text" oninput="showSu(this.value)" id="w" placeholder="Word" />
   <div id="nk">
   <i id="bn" class="bi bi-search" onclick="g()"></i>
   <i onclick="nkn()" class="bi bi-google"></i>
@@ -79,7 +100,7 @@
     async function g() {
       const w = document.getElementById('w').value.trim();
       const e = document.getElementById('e');
-      e.innerHTML = '';
+      e.innerHTML = 'Searchingggggg...';
       if (!w) return alert('Enter word');
       try {
         const r = await fetch(`https://api.dictionaryapi.dev/api/v2/entries/en/${w}`);
@@ -102,13 +123,53 @@
             const url = 'https://translate.google.com/?sl=en&tl=kn&text=' + encodeURIComponent(t) + '&op=translate';
             window.open(url, '_blank');
           };
+          e.innerHTML="";
           p.appendChild(b);
           e.appendChild(p);
+         // 
         });
       } catch {
-        e.innerHTML = '<p>Error</p>';
+        e.innerHTML = '<p> No Exampel</p>';
       }
     }
+  </script>
+  
+  <script>
+  function showSu(query) {
+  const input = document.getElementById('w');
+  
+  let box = document.getElementById('sug');
+  if (!box) {
+  box = document.createElement('div');
+  box.id = 'sug';
+  document.body.appendChild(box);
+  document.addEventListener('click', e => {
+  if (!box.contains(e.target) && e.target !== input) box.style.display = 'none';
+  });
+  }
+  
+  if (!query) { box.style.display = 'none'; return; }
+  
+  fetch('https://api.datamuse.com/sug?s=' + encodeURIComponent(query))
+  .then(res => res.json())
+  .then(data => {
+  box.innerHTML = '';
+  if (!data.length) { box.style.display = 'none'; return; }
+  const rect = input.getBoundingClientRect();
+  box.style.left = rect.left + 'px';
+  box.style.top = rect.bottom + window.scrollY + 'px';
+  box.style.width = rect.width + 'px';
+  data.forEach(item => {
+  const div = document.createElement('div');
+  div.textContent = item.word;
+  div.onclick = () => { input.value = item.word;g();
+  box.style.display = 'none'; };
+  box.appendChild(div);
+  });
+  box.style.display = 'block';
+  })
+  .catch(() => box.style.display = 'none');
+  }
   </script>
 </body>
 </html>
